--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,18 +1,16 @@
 <div id="part-view-full">
-    <h1 id="h3AboutHeader"> Don't just watch, join in</h1>
-    <p id="pAboutHeader">Welcome to Clean World. We are a global community of millions who come together each day to
-        create their own entertainment: unique, live, unpredictable, never-to-be repeated experiences created by the
-        magical interactions of the many. With chat built into every stream, you don’t just watch on Twitch, you’re a
-        part of the show.</p>
+    <h1 id="h3AboutHeader"> Nossa missão é organizar as informações do mundo para que sejam universalmente acessíveis e úteis para todos.</h1>
+    <!-- <p id="pAboutHeader">Bem-vindo ao Clean World. Somos uma comunidade global de milhões que se reúnem todos os dias para
+        criar próprio dilema: experiências únicas, imprevisíveis e sem repatição. Com inovação a cada fluxo, você não somente assite e sim
+        participa.</p> -->
     <div id="part-view-1">
-        <h1 id="h1AboutHeader"> How to start on Clear World</h1>
+        <h1 id="h1AboutHeader"> Inove, participe, junte-se ao show. </h1>
         <div id="cardsAbout">
             <div id="carBlue" class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                 <div class="card-header"></div>
                 <div class="card-body">
-                    <h5 class="card-title">Interact</h5>
-                    <p class="card-text">Whether you want to fill chat with your live commentary, or just sit back and
-                        lurk, it’s all good.</p>
+                    <h5 class="card-title">Interaja</h5>
+                    <p class="card-text">Crie sua comunidade única, aonde você pode realizar tudo.</p>
                 </div>
             </div>
 
@@ -20,21 +18,19 @@
                 <div class="card-header"></div>
                 <div class="card-body">
                     <h5 class="card-title">Explore</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <p class="card-text">Entre no mundo novo, explore suas possibilidades.</p>
                 </div>
             </div>
             <div id="cardYellow" class="card text-white bg-warning mb-3" style="max-width: 18rem;">
                 <div class="card-header"></div>
                 <div class="card-body">
-                    <h5 class="card-title">Contribute</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <h5 class="card-title">Contribua</h5>
+                    <p class="card-text">Disponibilize sua comunidade para contribuir com o mundo.</p>
                 </div>
             </div>
         </div>
-        <button id="btnGetStart" type="button" class="btn btn-outline-primary btn-sm" [routerLink]="[ '/register']">Get Started</button>
-        <label id="lblContact">Contact:</label>
+        <button id="btnGetStart" type="button" class="btn btn-outline-primary btn-sm" [routerLink]="[ '/register']">Vamos começar</button>
+        <label id="lblContact">Contato:</label>
         <button id="btnEmail" type="button" class="btn btn-link">clearworld@me.com</button>
     </div>
     <div id="part-view-2">
