--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,11 +2,11 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                    <a class="nav-link" [routerLink]="[ '/home']" routerLinkActive="active">Home</a>
+                    <a class="nav-link" [routerLink]="[ '/home']" routerLinkActive="active">Inicio</a>
             </li>
             <li id="navAbout" class="nav-item">
                 <!-- <a class="nav-link"  >About</a> -->
-                <a class="nav-link" [routerLink]="[ '/about']" routerLinkActive="active">About</a>
+                <a class="nav-link" [routerLink]="[ '/about']" routerLinkActive="active">Sobre</a>
             </li>
         </ul>
     </div>
