--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,15 +2,15 @@
     <div id="part-view-1" class="row">
         <div class="col-md-12">
             <p class="lead"> Login </p>
-            <input type="text" class="form-control" id="txtLogin" placeholder="Phone, email or username">
-            <input type="password" class="form-control" id="txtPassword" placeholder="Password">
-            <button id="btnLogin" class="btn btn-success btn-sm"> Log in</button>
+            <input type="text" class="form-control" id="txtLogin" placeholder="Número, e-mail ou usuário">
+            <input type="password" class="form-control" id="txtPassword" placeholder="Senha">
+            <button id="btnLogin" class="btn btn-success btn-sm"> Entrar</button>
             <input type="checkbox" class="form-check-input" id="ckRemember">
-            <label class="form-check-label" for="ckRemember" id="lblRemember">Remenber me</label>
+            <label class="form-check-label" for="ckRemember" id="lblRemember">Lembrar de mim</label>
             <hr>
             <img src="../../assets/images/logo.png" class="img-fluid" id="imgLogo">
-            <p id="pSingin" class="lead"> New to Clean World? <a [routerLink]="[ '/register']"
-                    class="stretched-link">Sing up</a></p>
+            <p id="pSingin" class="lead">Novo no Clean World? <a [routerLink]="[ '/register']"
+                    class="stretched-link">Cadastre-se</a></p>
         </div>
     </div>
 </div>
