--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <div id="part-view-full">
-    <h1 id="h3AboutHeader"> Nossa missão é organizar as informações do mundo para que sejam universalmente acessíveis e úteis para todos.</h1>
+    <h1 id="h3AboutHeader"> Nossa missão é organizar e criar comunidades para que seja universalmente acessíveis e úteis para o mundo.</h1>
     <!-- <p id="pAboutHeader">Bem-vindo ao Clean World. Somos uma comunidade global de milhões que se reúnem todos os dias para
         criar próprio dilema: experiências únicas, imprevisíveis e sem repatição. Com inovação a cada fluxo, você não somente assite e sim
         participa.</p> -->
@@ -34,6 +34,6 @@
         <button id="btnEmail" type="button" class="btn btn-link">clearworld@me.com</button>
     </div>
     <div id="part-view-2">
-        <p id="borderImg"><img src="../../assets/images/recycle_about.jpg" class="img-fluid" id="imgAbout"></p>
+        <p id="borderImg"><img src="../../assets/images/teste.jpg" class="img-fluid" id="imgAbout"></p>
     </div>
 </div>
