--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -15,8 +15,8 @@
 
 #part-view-2 {
     position: absolute;
-    height: 40%;
-    width: 55%;
+    height: 60%;
+    width: 60%;
     top: 40%;
     left: 23%;
 }
@@ -30,7 +30,7 @@
 
 #borderImg {
     border-color: #32CD32;
-    border-width: 10px;
+    border-width: 4px;
     border-style: solid;
     overflow: visible;
 }
@@ -51,7 +51,7 @@
 
 #cardsAbout {
     position: absolute;
-    top: 60%;
+    top: 68%;
     left: 10%;
     width: 100%;
 }
@@ -73,9 +73,10 @@
 
 #h1AboutHeader {
     position: absolute;
-    left: 25%;
-    top: 45%;
+    left: 28%;
+    top: 54%;
     color: #32CD32;
+    text-align: center;
 }
 
 #btnGetStart {
